--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,10 @@ h1 {
   animation-delay: 0.8s;
 }
 
+.row.current > div.filled {
+  animation: bounce 0.2s ease-in-out forwards;
+}
+
 /* KeyFrames Animation */
 @keyframes flip {
   0% {
@@ -91,5 +95,22 @@ h1 {
     background: var(--background);
     border-color: var(--border-color);
     color: #eee;
+  }
+}
+
+/* KeyFrames Bounce Animation */
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+    border-color: #ddd;
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+    border-color: #333;
   }
 }
